Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -173,22 +173,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Mexico'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "can't assign to literal (<ipython-input-8-49f5f6ce2169>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-49f5f6ce2169>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    'Mexico' = countries[4]\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to literal\n"
+     ]
     }
    ],
    "source": [
-    "'mexico' = countries[3]\n",
+    "'Mexico' = countries[4]\n",
     "mexico"
    ]
   },
