--- a/index.ipynb
+++ b/index.ipynb
@@ -408,11 +408,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = None"
+    "unique_countries = countries"
    ]
   },
   {
