--- a/index.ipynb
+++ b/index.ipynb
@@ -459,11 +459,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = None\n",
+    "len(countries)\n",
+    "\n",
+    "num_of_repeats = le\n",
     "num_of_repeats # 3"
    ]
   },
