Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -465,7 +465,7 @@
    "source": [
     "len(countries)\n",
     "\n",
-    "num_of_repeats = le\n",
+    "num_of_repeats = len(countries)-\n",
     "num_of_repeats # 3"
    ]
   },
