Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -408,16 +408,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = countries"
+    "unique_countries = set(countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -425,22 +425,19 @@
     {
      "data": {
       "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'USA',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'Italy',\n",
+       "{'Argentina',\n",
        " 'Canada',\n",
+       " 'Croatia',\n",
+       " 'Finland',\n",
+       " 'Italy',\n",
+       " 'Malta',\n",
+       " 'Mexico',\n",
+       " 'Morocco',\n",
        " 'South Korea',\n",
-       " 'Malta']"
+       " 'USA'}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +462,7 @@
    "source": [
     "len(countries)\n",
     "\n",
-    "num_of_repeats = len(countries)-\n",
+    "num_of_repeats = len(countries)-len()\n",
     "num_of_repeats # 3"
    ]
   },
